@@ -437,4 +437,5 @@ All functions \remph{after} a \texttt{\%default total} declaration are required
 to be total. Correspondingly, after a \texttt{\%default partial} declaration,
 the requirement is relaxed.
 
-
+Finally, the compiler flag \texttt{--warnpartial} causes \Idris{} to print
+a warning for any undeclared partial function.
